Use DB_HOST secret for database connection

--- a/.github/workflows/deploy-savings.yml
+++ b/.github/workflows/deploy-savings.yml
@@ -66,7 +66,7 @@ jobs:
         # Create .env file with GitHub Secrets
         cat > deploy/.env << EOF
         # Database Configuration
-        DB_HOST=localhost
+        DB_HOST=${{ secrets.DB_HOST }}
         DB_NAME=${{ secrets.DB_NAME }}
         DB_USER=${{ secrets.DB_USER }}
         DB_PASS=${{ secrets.DB_PASS }}
