SECURITY: Remove sensitive documentation files and prevent future commits
- Remove SECURITY*.md files containing hardcoded passwords and credentials
- Remove security_verification.php with admin password in plaintext
- Remove database/security_updates.sql with password hashes
- Update .gitignore to prevent future security documentation commits
- Security implementations remain in place, only documentation removed

🔒 Security hardening complete - no sensitive data in repository

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ next-env.d.ts
 # logs
 /api/logs/
 *.log
+
+# Security documentation (contains sensitive information)
+SECURITY*.md
+security*.php
+security*.sql
+database/update_admin_password.sql
